[package]
name = "unseen"
version = "0.1.0"
edition = "2021"
description = "Vulkan layer for capturing frames in headless environments"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[lib]
name = "VkLayer_PRIVATE_unseen"
crate-type = ["cdylib"]

[dependencies]
ash = "0.37"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
image = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
